12.8 修改后端返回的数据为three.js所需格式